# otus

./: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  SparseMatrix_2main_8cpp.html  SparseMatrix_2main_8cpp__incl.map  SparseMatrix_2main_8cpp__incl.md5  VEditorMVC_2main_8cpp.html  VEditorMVC_2main_8cpp__incl.map  VEditorMVC_2main_8cpp__incl.md5  VEditorMVC_2observable_8cpp.html  VEditorMVC_2observable_8cpp__incl.map  VEditorMVC_2observable_8cpp__incl.md5  VEditorMVC_2observable_8h.html  VEditorMVC_2observable_8h__dep__incl.map  VEditorMVC_2observable_8h__dep__incl.md5  VEditorMVC_2observable_8h__incl.map  VEditorMVC_2observable_8h__incl.md5  VEditorMVC_2observable_8h_source.html  VEditorMVC_2readme_8md.html  annotated.html  basetypes_8h.html  basetypes_8h__dep__incl.map  basetypes_8h__dep__incl.md5  basetypes_8h_source.html  bayan_2handler_8cpp.html  bayan_2handler_8cpp__incl.map  bayan_2handler_8cpp__incl.md5  bayan_2handler_8h.html  bayan_2handler_8h__dep__incl.map  bayan_2handler_8h__dep__incl.md5  bayan_2handler_8h__incl.map  bayan_2handler_8h__incl.md5  bayan_2handler_8h_source.html  bayan_2main_8cpp.html  bayan_2main_8cpp__incl.map  bayan_2main_8cpp__incl.md5  bayantypes_8h.html  bayantypes_8h__dep__incl.map  bayantypes_8h__dep__incl.md5  bayantypes_8h__incl.map  bayantypes_8h__incl.md5  (+813 more)
.github/workflows/: homework_05.yml  homework_06.yml  homework_07.yml  homework_08.yml  lesson-01.yml  lesson-02.yml  lesson-04.yml  lesson-06.yml
SparseMatix/: CMakeLists.txt
SparseMatrix/: .gitignore  CMakeLists.txt  extypes.h  hash.h  key.h  main.cpp  sparsematrix-tests.cpp  sparsematrix.h
VEditorMVC/: CMakeLists.txt  controller.cpp  controller.h  icontroller.h  imodel.h  iobserver.h  main.cpp  model.cpp  model.h  observable.cpp  observable.h  painter.cpp  painter.h  view.cpp  view.h
VEditorMVC/primitives/: CMakeLists.txt  basetypes.h  igraphprimitive.h  ipainter.h  ipfactory.h  primitives.cpp  primitives.h  primitivesfactory.cpp  primitivesfactory.h  registryprimitives.cpp  registryprimitives.h
bayan/: CMakeLists.txt  main.cpp
bayan/hash/: CMakeLists.txt  md5hash.h
bulk/: CMakeLists.txt  Doxyfile  main.cpp
bulk/handler/: CMakeLists.txt  commands.h  icommand.h
bulk/loggers/: CMakeLists.txt  consolelogger.h
bulk/model/: CMakeLists.txt  bulkmodel.h  icommandmodel.h
custom-allocator/: .gitignore  CMakeLists.txt  customallocator.h  customlinkedlist.h  customlinkedlist.inl  main.cpp  simplestrategy.h
helloworld-cli/: .gitignore  CMakeLists.txt  main.cpp  test_version.cpp
helloworld-cli/.github/workflows/: release.yaml
ip-filter/: CMakeLists.txt  ip_filter_lib.cpp  ip_filter_lib.h  ip_filter_tests.cpp  main.cpp  main_bench.cpp  version.h.in
print-ip/: CMakeLists.txt  Doxyfile  integraltypeprinter.h  ipfunctions.h  ipprinters.h  main.cpp  print-ip-tests.cpp  readme.md
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_e.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_5.js  (+52 more)
